[package]
name = "wws-worker"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
actix-web = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-nn = { workspace = true }
wasi-common = { workspace = true }
wws-config = { workspace = true }
wws-data-kv = { workspace = true }
wws-runtimes = { workspace = true }
wit-bindgen = "0.12.0"
base64 = "0.21.0"
bytes = "1.4"
sha256 = "1.1.1"
